party shooter link

--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,7 @@ author: Gage Birchmeier
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Download My Game!: "partyshooter"
 
 ################
 # --- Logo --- #
