--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ social-network-links:
   github: gsbirch
 #  medium: yourname
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: gage-birchmeier-a2836b22b
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -101,7 +101,7 @@ feed_show_tags: true
 # post_search: true
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
-edit_page_button: true
+edit_page_button: false
 
 # Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
 # If this setting is off, then long sub-menu words might get cut off
