--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "gsbi224@uky.edu"
+  email: "gage.birchmeier@uky.edu"
   github: gsbirch
 #  medium: yourname
 #  reddit: yourname
